# back-tester-2026

src/: CMakeLists.txt
src/common/: LimitOrderBook.cpp  MarketDataEvent.hpp
src/ingestion/: CMakeLists.txt  IngestionApp.cpp  JsonParser.cpp  JsonParser.hpp  MarketDataEvent.hpp
src/lob/: CMakeLists.txt  LimitOrderBook.cpp  LimitOrderBook.hpp  LobApp.cpp  LobManager.cpp  LobManager.hpp  OrderInstrumentMap.hpp
src/main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  IngestionTest.cpp  LOBTest.cpp
